# emdat_geocoding

./: .gitignore  LICENSE  README.md  adjust_emdat_gaul_batch.py  comparison_figures.ipynb  config.toml  example_emdat-gaul.ipynb  example_figures.ipynb  example_validation.py  make_gdis_batch.py  make_llm_geocoded_batches.py  merge_emdat_gdis_table.py  pyproject.toml  run_all.py  run_preprocessing.py  run_preprocessing_gdis.py  run_preprocessing_llm.py  run_validation.py  validation-figures.ipynb  validation_emdat_gaul_gdis_gadm_2000_2002_dissolved.csv  validation_gadm_2000_2002.csv  validation_gadm_2000_2002_dissolved.csv  visual_validation.ipynb
.ipynb_checkpoints/: run_geolocation-checkpoint.py
data/: gdis_disnos.csv
geocoding/: run_geolocation.py
geotools/: geom_indices.py
output/: gdis_gadm_gaul_batch1.csv  gdis_gadm_gaul_batch1_dissolved.csv  gdis_gadm_gaul_batch2.csv  gdis_gadm_gaul_batch2_dissolved.csv  gdis_gadm_gaul_batch3.csv  gdis_gadm_gaul_batch3_dissolved.csv  gdis_gadm_gaul_batch4.csv  gdis_gadm_gaul_batch4_dissolved.csv  gdis_gadm_gaul_batch5.csv  gdis_gadm_gaul_batch5_dissolved.csv  llm_gadm_gaul_batch1.csv  llm_gadm_gaul_batch1_dissolved.csv  llm_gadm_gaul_batch2.csv  llm_gadm_gaul_batch2_dissolved.csv  llm_gadm_gaul_batch3.csv  llm_gadm_gaul_batch3_dissolved.csv  llm_gadm_gaul_batch4.csv  llm_gadm_gaul_batch4_dissolved.csv  llm_gadm_gaul_batch5.csv  llm_gadm_gaul_batch5_dissolved.csv  llm_gadm_gdis_batch1.csv  llm_gadm_gdis_batch1_dissolved.csv  llm_gadm_gdis_batch2.csv  llm_gadm_gdis_batch2_dissolved.csv  llm_gadm_gdis_batch3.csv  (+45 more)
(+31 files in other folders)
