[project]
name = "emdat-geocoding"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
